examples/test/testpolicy5862.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5862
  namespace: namespace360
spec:
  podSelector:
    matchLabels:
      key36: value27
      key23: value23
      key19: value32
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key2: value20
          key4: value44
          key49: value10
      podSelector:
        matchLabels:
          key0: value44
